--- a/UIPageViewControllerSample/UIPageViewControllerSample/Base.lproj/Main.storyboard
+++ b/UIPageViewControllerSample/UIPageViewControllerSample/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -17,11 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cx9-xW-mvQ">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cx9-xW-mvQ">
                                 <rect key="frame" x="0.0" y="20" width="320" height="35"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="7P2-oQ-WmF"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Cx9-xW-mvQ" firstAttribute="top" secondItem="I7W-xW-C47" secondAttribute="bottom" id="1bb-Md-h85"/>
+                            <constraint firstItem="Cx9-xW-mvQ" firstAttribute="leading" secondItem="502-Ir-ELC" secondAttribute="leadingMargin" constant="-20" id="7tn-Hc-WLl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Cx9-xW-mvQ" secondAttribute="trailing" constant="-20" id="MUF-m8-lzZ"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
