--- a/UITableViewVariableRowHeight/UITableViewVariableRowHeight/Base.lproj/Main.storyboard
+++ b/UITableViewVariableRowHeight/UITableViewVariableRowHeight/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                                 <constraint firstAttribute="height" relation="lessThanOrEqual" priority="900" constant="90" id="XAS-uW-vG7"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
